--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,23 +9,26 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  flutter_redux: ^0.8.2
+  freezed_annotation: ^1.0.0
   http: ^0.13.4
+  json_annotation: ^4.4.0
   redux: ^5.0.0
   redux_epics: ^0.15.0
-  flutter_redux: ^0.8.2
 
 dependency_overrides:
   rxdart: ^0.27.3
 
 dev_dependencies:
+  build_runner: ^2.1.5
+  flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^1.0.0
+  freezed: ^1.0.2
+  json_serializable: ^6.1.1
 
 flutter:
   uses-material-design: true
