--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -41,6 +41,9 @@ analyzer:
     - "bin/cache/**"
     # Ignore protoc generated files
     - "dev/conductor/lib/proto/*"
+    - "**/*.freezed.dart"
+    - "**/*.g.dart"
+    - "**/*.chopper.dart"
 
 linter:
   rules:
